@startuml

title __BLOCKCHAIN's Class Diagram__\n

  namespace  maven{
    class MavenWrapperDownloader {
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      class com.app.blockchain.BlockchainApplication {
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      class com.app.blockchain.RestClient {
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      namespace controller {
        class com.app.blockchain.controller.BlockController {

                }
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      namespace controller {
        class com.app.blockchain.controller.NodeController {

                  }
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      namespace blockdto {
        class com.app.blockchain.dto.BlockDTO {
        }
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      namespace dto {
        class com.app.blockchain.dto.NodeDTO {
        }
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      namespace model {
        class com.app.blockchain.model.Block {
        }
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      namespace model {
        class com.app.blockchain.model.Node {
        }
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      namespace repository {
        interface com.app.blockchain.repository.IBlockRepository {
        }
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      namespace repository {
        interface com.app.blockchain.repository.INodeRepository {
        }
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      namespace service {
        class com.app.blockchain.service.BlockService {

                }
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      namespace service {
        interface com.app.blockchain.service.IBlockService {

                }
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      namespace service {
        interface com.app.blockchain.service.INodeService {

                }
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      namespace service {
        class com.app.blockchain.service.NodeService {
        }
      }
    }
  }


  namespace  app{
    namespace com.app.blockchain {
      namespace util {
        class com.app.blockchain.util.SHA256 {
        }
      }
    }
  }
  

  com.app.blockchain.BlockchainApplication .up.|> org.springframework.boot.CommandLineRunner
  com.app.blockchain.BlockchainApplication o-- com.app.blockchain.repository.IBlockRepository : blockRepository
  com.app.blockchain.BlockchainApplication o-- com.app.blockchain.repository.INodeRepository : nodeRepository
  com.app.blockchain.BlockchainApplication o-- com.app.blockchain.service.INodeService : nodeService
  com.app.blockchain.controller.BlockController o-- com.app.blockchain.service.IBlockService : blockService
  com.app.blockchain.controller.BlockController o-- com.app.blockchain.service.INodeService : nodeService
  com.app.blockchain.controller.NodeController o-- com.app.blockchain.service.INodeService : nodeService
  com.app.blockchain.service.BlockService .up.|> com.app.blockchain.service.IBlockService
  com.app.blockchain.service.BlockService o-- com.app.blockchain.repository.IBlockRepository : blockRepository
  com.app.blockchain.service.NodeService .up.|> com.app.blockchain.service.INodeService
  com.app.blockchain.service.NodeService o-- com.app.blockchain.service.IBlockService : blockService
  com.app.blockchain.service.NodeService o-- com.app.blockchain.repository.INodeRepository : nodeRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
